Fix canvas bottom whitespace

--- a/src/components/Canvas/style.scss
+++ b/src/components/Canvas/style.scss
@@ -1,5 +1,6 @@
 .canvas {
-  display: inline-block;
+  display: inline-flex;
   margin: 0 1rem;
   border: 1px solid #cccccc;
+  vertical-align: top;
 }
